fixed undeline not showing problem, Updated Hero.jsx and Hero.css

--- a/app/components/styles/Hero.css
+++ b/app/components/styles/Hero.css
@@ -48,7 +48,7 @@
 }
 
 .hero-description {
-  @apply font-serif text-white text-base md:text-3xl whitespace-nowrap mt-4;
+  @apply font-serif text-white text-base md:text-2xl mt-4;
 }
 
 .hero-button {
